[package]
name = "chip8-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.48", features = ["derive"] }
env_logger = "0.11.8"
log = "0.4.28"
pixels = "0.15.0"
rand = "0.9.2"
rodio = { version = "0.21.1", default-features = false, features = ["playback"] }
winit = "0.30.12"
